# eth-mev

./: .gitignore  setup.sh
contracts/aggregator/: UniswapV3Data.sol
contracts/aggregator/src/: Aggregator.sol  AggregatorOptimized.huff  BalancerWeightedData.sol  Console.huff  CurveData.sol  GetBalancerV2VaultDataBatchRequest.sol  SafeMath.sol  UniswapV2Data.sol  UniswapV3Data.sol  Vm.huff
contracts/aggregator/src/interfaces/: IDispatcher.sol  IERC20.sol  IRewardsCollector.sol  ISwapRouter.sol  IUniswapV2Pair.sol  IUniswapV3Pool.sol  IUniversalRouter.sol
contracts/aggregator/test/: Aggregator.t.sol
garb/: .env  Cargo.toml  balancer_weighted.json  blacklisted_pools.json  blacklisted_tokens.json  nodes
garb/src/: main.rs
garb/src/abi/: Aggregator.json  FlashbotsCheckAndSend.json  mod.rs
graph/: Cargo.toml
graph/src/: backrun.rs  lib.rs  mev_path.rs  single_arb.rs
sync/: Cargo.toml
sync/src/: balancer_weighted.rs  curve.rs  events.rs  lib.rs  node_dispatcher.rs  sushiswap.rs  types.rs  uniswap_v2.rs  uniswap_v3.rs
sync/src/abi/: Dispatcher.json  IUniversalRouter.json  mod.rs
sync/src/abi/balancer/: BalancerWeightedDataAggregator.json  mod.rs
sync/src/abi/curve/: CurvePlainDataAggregator.json  CurvePlainPairsBatch.json  mod.rs
sync/src/abi/uniswap_v2/: UniswapV2DataAggregator.json  mod.rs
sync/src/abi/uniswap_v3/: GetUniswapV3TickData.json  UniswapV3DataAggregator.json  mod.rs
