[package]
name = "garb_eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garb_sync_eth = { path = "../sync" }
garb_graph_eth = { path = "../graph" }
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0.66"
async-std = "1.12.0"
url = "2.3.1"
num_cpus = "1.14.0"
kanal = "0.1.0-pre7"
once_cell = "1.17.0"
ethers = "1.0.2"
ethers-providers = "1.0.2"