[package]
name = "garb_eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garb_sync_eth = { path = "../sync" }
garb_graph_eth = { path = "../graph" }
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0.66"
url = "2.3.1"
num_cpus = "1.14.0"
kanal = "0.1.0-pre7"
once_cell = "1.17.0"
ethers = "2.0.1"
ethers-providers = { version = "2.0.1", features = ["ipc", "ws"] }
ethers-flashbots = { git = "https://github.com/onbjerg/ethers-flashbots" }
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
futures = "0.3.26"

[features]
ipc = ["garb_graph_eth/ipc", "garb_sync_eth/ipc"]
