[package]
name = "garb_graph_eth"
version = "0.1.0"
edition = "2021"

[lib]
name = "garb_graph_eth"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0.66"
tokio = "1.17.0"
petgraph = "0.6.0"
once_cell = "1.16.0"
serde = "1.0.152"
bincode = "2.0.0-rc.2"
serde_json = "1.0.91"
async-std = "1.12.0"
garb_sync_eth = { path = "../sync" }
num_cpus = "1.14.0"
kanal = "0.1.0-pre7"
neo4rs = "0.5.9"