[package]
name = "garb_sync_eth"
version = "0.1.0"
edition = "2021"

[lib]
name = "garb_sync_eth"

[dependencies]
tokio = "1.21.2"
url = "2.3.1"
anyhow = "1.0.66"
once_cell = "1.16.0"
async-trait = "0.1.59"
futures = "0.3.24"
async-std = "1.12.0"
serde = "1.0.147"
serde_json = "1.0.87"
kanal = "0.1.0-pre7"
reqwest = "0.11.14"
bincode = "2.0.0-rc.2"
ethers = {version = "2.0.1", features = ["ws"]}
ethers-providers = { version = "2.0.1", features = ["ipc", "ws"] }
ethers-core = "2.0.1"
coingecko = "1.0.1"
byte-slice-cast = "1.2.2"
num_cpus = "1.15.0"
nom = "7.1.3"
num-bigfloat = "1.6.2"
uniswap_v3_math = "0.2.26"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
hex = "0.4.3"
itertools = "0.10.5"
rmp-serde = "1.1.1"
revm = "3.1.0"
serde_derive = "1.0.158"

[features]
ipc = []